@@ -1,7 +1,6 @@
 package polyall;
 
 import org.checkerframework.framework.qual.DefaultQualifier;
-import org.checkerframework.framework.qual.DefaultQualifiers;
 import org.checkerframework.framework.qual.TypeUseLocation;
 import polyall.quals.*;
 
@@ -16,14 +15,12 @@ import polyall.quals.*;
  */
 
 // set the defaults in the H2 hierarchy such that do not report errors in this test
-@DefaultQualifiers({
-    @DefaultQualifier(
-            value = H2Top.class,
-            locations = {TypeUseLocation.UPPER_BOUND}),
-    @DefaultQualifier(
-            value = H2Bot.class,
-            locations = {TypeUseLocation.LOWER_BOUND})
-})
+@DefaultQualifier(
+        value = H2Top.class,
+        locations = {TypeUseLocation.UPPER_BOUND})
+@DefaultQualifier(
+        value = H2Bot.class,
+        locations = {TypeUseLocation.LOWER_BOUND})
 public class IncompatibleBounds {
 
     // The bounds below are valid
